# keri-acdc

./: Cargo.toml  README.md
examples/: acdc-e2e.rs
src/: error.rs  lib.rs
src/acdc/: event.rs  mod.rs  schemer.rs  verification.rs
src/acdc/tel/: management.rs  mod.rs  verification.rs
src/keri/: labels.rs  mod.rs  parsing.rs
src/keri/kmi/: endorsement.rs  event.rs  mod.rs  verification.rs
